[package]
name = "cattener"
version = "0.1.0"
edition = "2021"
authors = ["Amidamaru <ardtimeit@gmail.com"]

[dependencies]
axum = {version = "0.8.1", features = ["macros"]}
env_logger = "0.11.6"
http = "1.2"
log = "0.4.25"
nanoid = "0.4.0"
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
sled = "0.34.7"
tokio = {version = "1.43.0", features = ["full"]}

[dev-dependencies]
futures = "0.3.31"
tower = { version = "0.5.2", features = ["util"] }
